# ReportStack

./: .env.example  .gitignore  CLAUDE.md  HANDOFF_BRANDING.md  ROUTER.md  ReportStack_Documentation.docx  ReportStack_Linux_Prerequisites.docx  ReportStack_User_Guide.docx  ReportStack_pytest_Framework_Guide.docx  ReportStack_pytest_Framework_Guide.md  UI_NAVIGATION.md  cicd-skill.md  docker-compose.yml  generate_doc.py  generate_prerequisites.py  generate_pytest_framework_guide.py  generate_user_guide.py
SKILLS and DOXC/: CLAUDE.md  architect-skill-review.md  automation-architect-skill.md  cicd-skill.md  device-lab-skill.md
backend/: alembic.ini  requirements.txt  seed_data.py
backend/app/: database.py  main.py
backend/app/api/: analyses.py  attachments.py  auth.py  comments.py  dashboards.py  defects.py  launches.py  logs.py  members.py  project_settings.py  test_history.py  test_items.py
backend/app/models/: __init__.py  analysis.py  attachment.py  comment.py  dashboard.py  defect.py  launch.py  log.py  member.py  project_settings.py  test_item.py  user.py
backend/app/schemas/: analysis.py  attachment.py  auth.py  comment.py  dashboard.py  defect.py  launch.py  log.py  member.py  project_settings.py  test_item.py
backend/app/services/: ai_analyzer.py  auth.py  retention.py  storage.py
backend/migrations/: env.py
backend/migrations/versions/: 001_add_test_logs.py  002_add_attachments.py  003_add_failure_analyses.py  007_add_dashboards.py  (+6 more)
bot/: .env.example  agent.py  backend_client.py  config.py  handlers.py  main.py  requirements.txt  skill.md
deploy/: PREREQUISITES.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css
plugins/pytest-automation-reports/: pyproject.toml
plugins/pytest-automation-reports/pytest_automation_reports/: __init__.py  client.py  config.py  log_capture.py  plugin.py  screenshot.py  selenium_hooks.py
test_framework_starter/: README.md  conftest.py  pyproject.toml  pytest.ini
test_framework_starter/api_client/: __init__.py  base.py  radio_backend.py
test_framework_starter/commands/: __init__.py  loader.py
test_framework_starter/commands/examples/: generic_linux.json  wnc_radio.json
test_framework_starter/radios/: __init__.py  base.py  serial_radio.py  ssh_radio.py
test_framework_starter/steps/: __init__.py  api_steps.py  measure.py  nfr_steps.py  power.py  tune.py  web_steps.py
test_framework_starter/tests/: conftest.py  test_kpi.py  test_nfr_performance.py  test_nfr_reliability.py  test_nfr_stress.py  test_regression.py  test_smoke.py
test_framework_starter/web/: __init__.py  base.py  tnc_pages.py
test_framework_starter/web/locators/: dashboard.json  login.json  radio_control.json
tests/e2e/: .gitignore  README.md  analysis-defects.spec.ts  auth.spec.ts  launches.spec.ts  package.json  playwright.config.ts  test-items-logs.spec.ts  tsconfig.json
(+46 files in other folders)
