[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-test-framework-starter"
version = "0.1.0"
description = "Pytest framework starter for Linux radio device testing, with ReportStack reporting"
requires-python = ">=3.10"
dependencies = [
  "pytest>=7.4",
  "pytest-xdist>=3.5",      # parallel — replaces TestNG parallel=methods
  "pytest-rerunfailures>=14.0",  # retry — replaces TestNG RetryListener
  "paramiko>=3.4",           # SSH device control
  "pyserial>=3.5",           # serial / UART device control
  "Pillow>=10.0",            # screenshot/image processing
  "structlog>=24.1",         # structured logging
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
include = ["radios*", "commands*", "steps*"]

[tool.pytest.ini_options]
# Most config lives in pytest.ini so suite leads can edit it without touching
# packaging metadata. See pytest.ini for marker registry.
testpaths = ["tests"]
